--- a/css/flipcard.css
+++ b/css/flipcard.css
@@ -23,6 +23,7 @@
     transform: rotateY(180deg);
 }
 
+
 /* Position the front and back side */
 .flip-card-front, .flip-card-back {
     position: absolute;
@@ -35,6 +36,8 @@
 /* Style the back side */
 .flip-card-back {
     background-color: #EBE3DC;
+    width: 100%;
+    height: 100%;
     color: #44566c;
     transform: rotateY(180deg);
 }
